project(examples)
cmake_minimum_required(VERSION 3.2)
set(CMAKE_CXX_STANDARD 17)
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src")
set(PROJECT_TOOLS_BINARY_DIR ${CMAKE_SOURCE_DIR}/build/examples/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_TOOLS_BINARY_DIR})

set(examples_list)
list(APPEND examples_list my_analysis)
foreach(example ${examples_list})
    add_executable(${example} ${CMAKE_SOURCE_DIR}/examples/${example}.cpp)
    target_link_libraries(${example} binaryen wasm_instrumenter_lib)
    target_include_directories(${example} SYSTEM PRIVATE ${CMAKE_SOURCE_DIR}/third_party/binaryen/src)
endforeach()