project(tools)
cmake_minimum_required(VERSION 3.2)
set(CMAKE_CXX_STANDARD 17)
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src")
set(PROJECT_TOOLS_BINARY_DIR ${CMAKE_SOURCE_DIR}/build/tools/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_TOOLS_BINARY_DIR})

set(tools_list)
list(APPEND tools_list wabidb-inspect)
foreach(tool ${tools_list})
    message("add tool file: ${tool}")
    add_executable(${tool} ${CMAKE_SOURCE_DIR}/src/tools/${tool}.cpp)
    target_link_libraries(${tool} binaryen wasm_instrumenter_lib)
    target_include_directories(${tool} SYSTEM PRIVATE ${CMAKE_SOURCE_DIR}/third_party/binaryen/src)
endforeach()